more stuff. introduce number of sq moves in the formula from another perspective (if small amount board balance plays greater role).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,10 +89,25 @@ target_link_libraries(four_move square_remover)
 target_compile_definitions(four_move PUBLIC -DSQR_REM_FOUR_MOVE)
 set_target_properties(four_move PROPERTIES COMPILE_FLAGS "-Wno-unused-but-set-variable -Wno-unused-variable")
 
-add_executable(beam app/methods.cpp app/main_template.cpp)
-target_link_libraries(beam square_remover)
-target_compile_definitions(beam PUBLIC -DSQR_REM_BEAM)
-set_target_properties(beam PROPERTIES COMPILE_FLAGS " -Wno-unused-variable -Wno-narrowing")
+add_executable(beam_1 app/methods.cpp app/main_template.cpp)
+target_link_libraries(beam_1 square_remover)
+target_compile_definitions(beam_1 PUBLIC -DSQR_REM_BEAM_1)
+set_target_properties(beam_1 PROPERTIES COMPILE_FLAGS " -Wno-unused-variable -Wno-narrowing")
+
+add_executable(beam_2 app/methods.cpp app/main_template.cpp)
+target_link_libraries(beam_2 square_remover)
+target_compile_definitions(beam_2 PUBLIC -DSQR_REM_BEAM_2)
+set_target_properties(beam_2 PROPERTIES COMPILE_FLAGS " -Wno-unused-variable -Wno-narrowing")
+
+add_executable(beam_2_tester app/methods.cpp app/tester_template.cpp)
+target_link_libraries(beam_2_tester square_remover)
+target_compile_definitions(beam_2_tester PUBLIC -DSQR_REM_BEAM_2)
+set_target_properties(beam_2_tester PROPERTIES COMPILE_FLAGS " -Wno-unused-variable -Wno-narrowing")
+
+add_executable(beam_3 app/methods.cpp app/main_template.cpp)
+target_link_libraries(beam_3 square_remover)
+target_compile_definitions(beam_3 PUBLIC -DSQR_REM_BEAM_2)
+set_target_properties(beam_3 PROPERTIES COMPILE_FLAGS " -Wno-unused-variable -Wno-narrowing")
 
 add_executable(beam_tester app/methods.cpp app/tester_template.cpp)
 target_link_libraries(beam_tester square_remover)
